# port-manager

./: Cargo.toml  README.md
egui-app/: Cargo.toml  README.md
egui-app/src/: main.rs
src/: app.rs  main.rs  net.rs  reservation.rs  ui.rs
src/Tauri/: Cargo.toml
src/Tauri/src-tauri/: Cargo.toml  tauri.conf.json
src/Tauri/src-tauri/src/: main.rs
src/api/: Cargo.toml  README.md  database.db  port_reservation_tests.posting.yaml  posting-filter-tests.yaml  reservations.json
src/api/src/: main.rs  net.rs  reservation.rs
src/monitoring/: docker-compose.yml  port_manager_advanced_dashboard.json
src/monitoring/prometheus/: prometheus.yml
