[package]
name = "api"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "4.4.0"
rusqlite = "0.30.0"
serde = { version = "1.0.197", features = ["derive"] }
jsonwebtoken = "9.3.1"
log = "0.4.21"
env_logger = "0.11.3"
validator = "0.20.0"
validator_derive = "0.20.0"
serde_json = "1.0"
prometheus = "0.13"
actix-web-prom = "0.6"
lazy_static = "1.4"
procfs = "0.15.1"
actix-web-lab = "0.19"